--- a/templates/resume.html
+++ b/templates/resume.html
@@ -24,10 +24,10 @@
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
 
-    <link rel="manifest" href="comm/site.webmanifest" />
-    <link rel="apple-touch-icon" sizes="180x180" href="comm/apple-touch-icon.png" />
-    <link rel="icon" type="image/png" sizes="32x32" href="comm/favicon-32x32.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="comm/favicon-16x16.png" />
+    <link rel="manifest" href="assets/comm/site.webmanifest" />
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/comm/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/comm/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/comm/favicon-16x16.png" />
     <style type="text/css">
         {% include 'style.css' %}
     </style>
