--- a/templates/resume.html
+++ b/templates/resume.html
@@ -120,6 +120,20 @@
                 <div class="clear"></div>
             </section>
             <section>
+                <h2 id="education">Education</h2>
+                <div class="section_content">
+                    {% for edu in resume['education'] %}
+                    <article class="education">
+                        <h3 class="position">{{ edu['school'] }}</h3>
+                        <p><strong>{{ edu['degree'] }}, {{ edu['field'] }}</strong></p>
+                        <p>{{ edu['start'] }}, {{ edu['end'] }}</p>
+                        <p class="key_tech">Grade: {{ edu['grade'] }}</p>
+                    </article>
+                    {% endfor %}
+                </div>
+                <div class="clear"></div>
+            </section>
+            <section>
                 <h2 id="skills">Skills</h2>
                 <div class="section_content">
                     {%- if 'strengths' in resume['skills'] %}
