feat: update education template

--- a/templates/resume.html
+++ b/templates/resume.html
@@ -126,7 +126,7 @@
                     <article class="education">
                         <h3 class="position">{{ edu['school'] }}</h3>
                         <p><strong>{{ edu['degree'] }}, {{ edu['field'] }}</strong></p>
-                        <p>{{ edu['start'] }}, {{ edu['end'] }}</p>
+                        <p>{{ edu['start'] }} - {{ edu['end'] }}</p>
                         <p class="key_tech">Grade: {{ edu['grade'] }}</p>
                     </article>
                     {% endfor %}
