feat: update html template

--- a/templates/resume.html
+++ b/templates/resume.html
@@ -2,32 +2,32 @@
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en-US" xml:lang="en-US">
 
 <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes" />
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
     <title>{{ resume['name'] }}</title>
-    <base href="{{ resume['url'] }}/" />
-    <link rel="canonical" href="{{ resume['url'] }}" />
-    <meta name="description" content="{{ resume['description'] }}" />
-    <meta name="keywords" content="Thang Ngo, devexps, Senior Backend Engineer, Principal Software Engineer, Golang Developer, Microservices, Kubernetes, Docker, DevOps, CI/CD, Mobile Development, Java, Kotlin, Objective-C, Swift, Dart, Rate Limiter, Circuit Breaker, Kafka, ETCD, Prometheus, Grafana, Elasticsearch, Fluentd, Kibana, Jenkins, GitLab CI/CD" />
-    <meta name="viewport" content="width=device-width,initial-scale=1" />
-    <meta name="HandheldFriendly" content="True" />
-    <meta name="MobileOptimized" content="320" />
+    <base href="{{ resume['url'] }}/">
+    <link rel="canonical" href="{{ resume['url'] }}">
+    <meta name="description" content="{{ resume['description'] }}">
+    <meta name="keywords" content="Thang Ngo, devexps, Senior Backend Engineer, Principal Software Engineer, Golang Developer, Microservices, Kubernetes, Docker, DevOps, CI/CD, Mobile Development, Java, Kotlin, Objective-C, Swift, Dart, Rate Limiter, Circuit Breaker, Kafka, ETCD, Prometheus, Grafana, Elasticsearch, Fluentd, Kibana, Jenkins, GitLab CI/CD">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <meta name="HandheldFriendly" content="True">
+    <meta name="MobileOptimized" content="320">
 
     <!-- Open Graph -->
-    <meta property="og:locale" content="en_US" />
-    <meta property="og:type" content="article" />
-    <meta property="og:title" content="Thang Ngo's Resume" />
-    <meta property="og:description" content="{{ resume['description'] }}" />
-    <meta property="og:url" content="{{ resume['url'] }}" />
-    <meta property="og:site_name" content="Thang Ngo's Resume" />
-    <meta property="og:image" content="{{ resume['url'] }}/assets/img/resume-og.jpeg" />
-    <meta property="og:image:width" content="1200" />
-    <meta property="og:image:height" content="630" />
+    <meta property="og:locale" content="en_US">
+    <meta property="og:type" content="article">
+    <meta property="og:title" content="Thang Ngo's Resume">
+    <meta property="og:description" content="{{ resume['description'] }}">
+    <meta property="og:url" content="{{ resume['url'] }}">
+    <meta property="og:site_name" content="Thang Ngo's Resume">
+    <meta property="og:image" content="{{ resume['url'] }}/assets/img/resume-og.jpeg">
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="630">
 
-    <link rel="manifest" href="assets/comm/site.webmanifest" />
-    <link rel="apple-touch-icon" sizes="180x180" href="assets/comm/apple-touch-icon.png" />
-    <link rel="icon" type="image/png" sizes="32x32" href="assets/comm/favicon-32x32.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="assets/comm/favicon-16x16.png" />
+    <link rel="manifest" href="assets/comm/site.webmanifest">
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/comm/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/comm/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/comm/favicon-16x16.png">
     <style type="text/css">
         {% include 'style.css' %}
     </style>
@@ -45,22 +45,22 @@
                     <ul>
                         <li>
                             <a href="mailto:{{ resume['contact']['email'] }}"><img
-                                src="assets/img/envelope-solid.png" alt="mail:" class="icon" /></a><a
+                                src="assets/img/envelope-solid.png" alt="mail:" class="icon"></a><a
                                 href="mailto:{{ resume['contact']['email'] }}">{{ resume['contact']['email'] }}</a>
                         </li>
                         <li>
                             <a href="{{ resume['contact']['web']['url'] }}"><img
-                                src="assets/img/globe-americas-solid.png" alt="web:" class="icon" /></a><a
+                                src="assets/img/globe-americas-solid.png" alt="web:" class="icon"></a><a
                                 href="{{ resume['contact']['web']['url'] }}">{{ resume['contact']['web']['title'] }}</a>
                         </li>
                         <li>
                             <a href="https://github.com/{{ resume['contact']['github'] }}"><img
-                                src="assets/img/github-brands.png" alt="github:" class="icon" /></a><a
+                                src="assets/img/github-brands.png" alt="github:" class="icon"></a><a
                                 href="https://github.com/{{ resume['contact']['github'] }}">github.com/{{ resume['contact']['github'] }}</a>
                         </li>
                         <li>
                             <a href="{{ resume['contact']['location']['url'] }}"><img
-                                src="assets/img/map-marker-solid.png" alt="location:" class="icon" /></a><a
+                                src="assets/img/map-marker-solid.png" alt="location:" class="icon"></a><a
                                 href="{{ resume['contact']['location']['url'] }}">{{ resume['contact']['location']['title'] }}</a>
                         </li>
                     </ul>
@@ -70,16 +70,16 @@
         <div id="other_formats">
             <ul>
                 <li><a href="{{ resume['formats']['pdf']['url'] }}"><img
-                        src="assets/img/file-pdf-regular.png" alt="PDF" class="icon" /></a><a
+                        src="assets/img/file-pdf-regular.png" alt="PDF" class="icon"></a><a
                         href="{{ resume['formats']['pdf']['url'] }}">Pdf</a></li>
                 <li><a href="{{ resume['formats']['word']['url'] }}"><img
-                        src="assets/img/file-word-regular.png" alt="Word" class="icon" /></a><a
+                        src="assets/img/file-word-regular.png" alt="Word" class="icon"></a><a
                         href="{{ resume['formats']['word']['url'] }}">Docx</a></li>
                 <li><a href="{{ resume['repo']['url'] }}/blob/master/README.md"><img
-                        src="assets/img/markdown-brands.png" alt="Markdown" class="icon" /></a><a
+                        src="assets/img/markdown-brands.png" alt="Markdown" class="icon"></a><a
                         href="{{ resume['repo']['url'] }}/blob/master/README.md">Md</a></li>
                 <li><a href="{{ resume['formats']['txt']['url'] }}"><img
-                        src="assets/img/file-alt-solid.png" alt="Plain Text" class="icon" /></a><a
+                        src="assets/img/file-alt-solid.png" alt="Plain Text" class="icon"></a><a
                         href="{{ resume['formats']['txt']['url'] }}">Txt</a></li>
             </ul>
         </div>
@@ -105,13 +105,13 @@
                         </ul>
                         {%- if 'tech' in job %}
                         <p class="key_tech">
-                            <strong>Key Technologies:</strong><br />
-                        <em>
-                        {%- for skill in job['tech'] -%}
-                            {{ skill }}
-                            {%- if not loop.last %}, {% endif %}
-                        {%- endfor %}
-                        </em>
+                            <strong>Key Technologies:</strong><br>
+                            <em>
+                            {%- for skill in job['tech'] -%}
+                                {{ skill }}
+                                {%- if not loop.last %}, {% endif %}
+                            {%- endfor %}
+                            </em>
                         </p>
                         {%- endif %}
                     </article>
@@ -123,19 +123,17 @@
                 <h2 id="skills">Key Skills</h2>
                 <div class="section_content">
                     {%- if 'keys' in resume['skills'] %}
-                    <p class="key_skill">
-                        <ul>
-                            {%- for item in resume['skills']['keys'] %}
-                              <li>{{ item }}</li>
-                            {%- endfor %}
-                        </ul>
-                    </p>
+                    <ul>
+                        {%- for item in resume['skills']['keys'] %}
+                          <li>{{ item }}</li>
+                        {%- endfor %}
+                    </ul>
                     {%- endif %}
                 </div>
                 <div class="clear"></div>
             </section>
             <section>
-                <h2 id="">Projects</h2>
+                <h2 id="projects">Projects</h2>
                 <div class="section_content">
                     {% for project in resume['projects'] %}
                     <article class="content">
@@ -176,17 +174,17 @@
             <div id="footer_left">
                 <div id="foot_contact">
                     <a href="mailto:{{ resume['contact']['email'] }}"><img src="assets/img/envelope-solid.png" alt="envelope icon"
-                            class="icon" /><span>{{ resume['contact']['email'] }}</span></a>
+                            class="icon"><span>{{ resume['contact']['email'] }}</span></a>
                 </div>
                 <div id="foot_source">
                     <a href="{{ resume['repo']['url'] }}"><img src="assets/img/git-alt-brands.png"
-                            alt="git repo icon" class="icon" /><span>Resume source on GitHub</span></a><br />
+                            alt="git repo icon" class="icon"><span>Resume source on GitHub</span></a><br>
                 </div>
             </div>
             <div id="footer_right">
                 <div id="foot_to_top">
                     <a href="#top"><img src="assets/img/arrow-alt-circle-up-solid.png" alt="up arrow icon"
-                            class="icon" /><span>Back to Top</span></a>
+                            class="icon"><span>Back to Top</span></a>
                 </div>
                 <div id="foot_copyright">
                     <span>&copy; {{ year }} {{ resume['name'] }}</span>
