--- a/templates/style.css
+++ b/templates/style.css
@@ -70,6 +70,7 @@ h1 {
 }
 
 #name h2 {
+  margin-top: 10px;
   margin-left: 2px;
   color: #EDEDED;
   font-size: 1em;
@@ -143,8 +144,8 @@ a[href^=tel] {
 }
 
 article.content {
-  margin-bottom: 14px;
-  padding-bottom: 14px;
+  margin-bottom: 20px;
+  padding-bottom: 20px;
   border-bottom: 1px dashed #DEDEDE;
 }
 
@@ -185,12 +186,13 @@ section h2 {
   flex: 0 1 auto;
   width: 130px;
   margin-right: 10px;
+  margin-bottom: 10px;
   word-wrap: break-word;
 }
 
 .section_content {
   flex: 1;
-  margin-bottom: 20px;
+  margin-bottom: 0px;
   line-height: 140%;
 }
 
@@ -331,6 +333,7 @@ p.key_tech {
   }
 
   #name h2 {
+    margin-top: 10px;
     font-size: 1.2em;
   }
 
