feat: update resume content

--- a/templates/resume.html
+++ b/templates/resume.html
@@ -159,7 +159,7 @@
                         <h3 class="position">{{ edu['school'] }}</h3>
                         <p><strong>{{ edu['degree'] }}, {{ edu['field'] }}</strong></p>
                         <p>{{ edu['start'] }} - {{ edu['end'] }}</p>
-                        <p class="key_tech">Grade: {{ edu['grade'] }}</p>
+                        <p class="key_tech">{{ edu['grade'] }}</p>
                     </article>
                     {% endfor %}
                 </div>
